MM-11371 - Fixing sidebar spacing issue

--- a/sass/responsive/_mobile.scss
+++ b/sass/responsive/_mobile.scss
@@ -1146,10 +1146,6 @@
             height: calc(100% - 55px);
         }
 
-        > div {
-            padding-bottom: 70px;
-        }
-
         .nav-pills__unread-indicator {
             width: 260px;
         }
